--- a/doc/1_Introduccion.tex
+++ b/doc/1_Introduccion.tex
@@ -7,12 +7,12 @@ El viento es uno de los fenómenos meteorológicos más comunes de las zonas cos
 a lo largo de la historia el estudio de este fenómeno con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
 Entre los diversos efectos del viento, uno de los más simples y útiles es su capacidad de mover objetos, lo cual ha permitido al hombre aprovechar esta propiedad para convertir la energía cinética del viento en energía eléctrica. Dicha fuente de energía es conocida como energía eólica, ampliamente calificada como renovable y poco contaminante.\\
 Acorde a esto último, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energías renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
-Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales ha considerar: la velocidad y la dirección del viento. Por lo tanto, es necesario en primera instancia, recopilar mediciones del viento de la zona a estudiar.
+Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales ha considerar: la velocidad y la dirección del viento. Ejemplo de ello es el estudio realizado sobre el potencial eléctrico en la provincia de Bushehr, Iran por Dabbaghiyan et al. \cite{Dabbaghiyan15}, o el trabajo de Chang en Taiwan \cite{Chang10_2}.\\ 
+En primera instancia, es necesario recopilar mediciones del viento de la zona a estudiar.
 Actualmente estos datos están disponibles y son obtenidos por diversos centros meteorológicos a lo largo del país. Para este proyecto, el servicio meteorológico de la Armada de Chile, que cuenta con el equipo necesario para registrar el comportamiento del viento a lo largo de las distintas épocas del año y en diferentes zonas de Chile, ha dispuesto de los registros del viento en la comuna de Valparaíso de los años 2013, 2014 y 2015.\\
-Con los datos a disposición, es necesario obtener modelos que expliquen la distribución de estos, de manera de poder obtener fácilmente información
-precisa que permita por ejemplo, evaluar el potencial eléctrico de cierta zona \cite{Dabbaghiyan15}. \\ 
+Con los datos a disposición, es necesario obtener modelos que expliquen la distribución de estas mediciones, de manera de poder obtener información relevante respecto al comportamiento del viento en función del estudio a realizar. \\ 
 En la literatura, son ampliamente aceptadas la distribución de \emph{Weibull} para modelar el conjunto datos de velocidad y la distribución de Von Mises para el modelo de la dirección del viento. Ambas distribuciones probabilistas requieren de la determinación de parámetros para que el modelo se ajuste a los datos obtenidos. La elección del método para poder encontrar los parámetros de ajustes definirá la calidad de los modelos, por ello, diversas fórmulas han sido presentadas en la literatura, las cuales tienen mayor o menor precisión dependiendo de las características de los datos, la calidad del método o la estrategia utilizada. Comúnmente, se utilizan métodos numéricos para la determinación de estos parámetros, sin embargo, estudios recientes han abordado nuevas estrategias
-utilizando métodos heurísticos, en particular la meta-heurística \emph{Particle Swarm Optimization} (PSO), con la cual se ha logrado mejorar la calidad del modelo para la velocidad del viento, como se expone en un caso de estudio en Brasil  \cite{Carneiro15}, mientras que para la dirección del viento se ha propuesto una forma más sencilla para poder obtener los parámetros de ajuste a través del uso de PSO. La ventaja del uso de PSO es que es un algoritmo de uso general, de fácil implementación, buen tiempo de ejecución y con resultados cercanos al óptimo a encontrar.\\
+utilizando métodos heurísticos, en particular la meta-heurística \emph{Particle Swarm Optimization} (en adelante también referido como PSO), con la cual se ha logrado mejorar la calidad del modelo para la velocidad del viento, como se expone en el caso de estudio en el noreste de Brasil por Carneiro et. al.  \cite{Carneiro15}, mientras que para la dirección del viento se ha propuesto una forma más sencilla para poder obtener los parámetros de ajuste a través del uso de PSO. La ventaja del uso de PSO es que es un algoritmo de uso general, de fácil implementación, buen tiempo de ejecución y con resultados cercanos al óptimo a encontrar.\\
 Por lo anterior, el trabajo a realizar en este proyecto se basa en validar el uso de PSO para encontrar los parámetros de ajuste de la distribución de Weibull con datos de la zona de la comuna de Valparaíso y abordar la estrategia propuesta por Heckenbergerova et al.\cite{Heckenbergerova15} para el ajuste del modelo de dirección del viento.
 
 \section{Objetivos}
