--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -25,7 +25,7 @@
     year={2015}
 }
 @article{Winddirelse15,
-    author={Letter to the Editor},
+    author={Masseran, Nurulkamal and Razali, Ahmad Mahir},
     title={Modeling the wind direction behaviors during the monsoon seasons in Peninsular Malaysia},
     publisher={Elsevier Ltd},
     year={2015}
@@ -64,6 +64,24 @@
     publisher={Elsevier Ltd},
     year={2010}
 }
+@article{Chang10_2,
+    author={Chang, Tian Pau},
+    title={Wind energy assessment incorporating particle swarm optimization method},
+    publisher={Elsevier Ltd},
+    year={2010} 
+}
+@article{Fadare08,
+    author={Fadare, D.A.},
+    title={A statistical analysis of wind energy potential in Ibadan, Nigeria, based on Weibull distribution function},
+    publisher={Pacific Journal of Science and Tecnology},
+    year={2008} 
+}
+@article{Weisser02,
+    author={Weisser, Daniel},
+    title={A wind energy analysis if Grenada: an estimation using the Weibull density function},
+    publisher={Elsevier Ltd},
+    year={2002} 
+}
 @article{Dabbaghiyan15,
     author={Dabbaghiyan, Amir and Fazelpour, Farivar and Abnavim, Mohhamadreza Dehghan and Rosen, Marc a.},
     title={Evaluation of wind energy potential in province of Bushehr, Iran},
@@ -75,4 +93,16 @@
     title={Statistical modelling of directional wind speeds using mixtures of von Mises distribution: Case study},
     publisher={Elsevier Ltd},
     year={2007}
+}
+@article{RosaViento,
+    author={Ramírez, Evangelina Lara and Vivanco, Sonia Fabiola Moreno},
+    title={Análisis de parámetros metereológicos utilizando el modelo de la Rosa de los vientos},
+    publisher={Biblioteca universitaria Raúl Rangel Frías},
+    year={2007}
+}
+@article{Heckenbergerova13,
+    author={Heckenbergerova, Jana and Musilek, Petr and Mejznar, Jakub and Vancura, Martin},
+    title={Estimation of wind direction distribution with genetic algorithms},
+    publisher={26th IEEE Canadian Conference Of Electrical And Computer Engineering},
+    year={2013}
 }
