--- a/doc/4_Analisis.tex
+++ b/doc/4_Analisis.tex
@@ -21,7 +21,7 @@ Por ejemplo, se logra apreciar que las máximas velocidades son obtenidas en los
             \label{fig:data_valpo_15}
             \includegraphics[width=0.4\textwidth]{figures/3d_data_2015.png}
         }%
-    \caption{Superficie de datos viento de Valparaíso. Fuente: Elaboración Propia.}
+    \caption{Superficie de datos viento de Valparaíso.\\ Fuente: Elaboración Propia.}
     \label{fig:subfigures}
 \end{figure}
 
@@ -42,7 +42,7 @@ trabajados.\\
             \label{fig:pso_valpo_15}
             \includegraphics[width=0.4\textwidth]{figures/result_2015.png}
         }%
-    \caption{Ajuste con PSO a datos del viento de Valparaíso. Fuente: Elaboración Propia.}
+    \caption{Ajuste con PSO a datos del viento de Valparaíso.\\ Fuente: Elaboración Propia.}
     \label{fig:subfigures}
 \end{figure}
 
@@ -58,7 +58,7 @@ En este experimento se realizó el ajuste considerando los promedios diarios y u
             \label{fig:pso_valpo_15_14_13_lq}
             \includegraphics[width=0.4\textwidth]{figures/result_13-14-15_low_quality.png}
         }%
-    \caption{Ajuste con PSO a datos Valparaíso 2015, 2014 y 2013, baja y buena calidad. Fuente: Elaboración Propia.}
+    \caption{Ajuste con PSO a datos Valparaíso 2015, 2014 y 2013, baja y buena calidad.\\ Fuente: Elaboración Propia.}
     \label{fig:subfigures}
 \end{figure}
 
@@ -80,7 +80,7 @@ El ajuste desde los resultados estadísticos (tabla \ref{table:stadistical_tests
         \includegraphics[width=0.4\textwidth]{figures/result_2015_fit_all_data.png}
     }%     
 
-    \caption{Ajuste con PSO a registros del viento en Valparaíso (Con todos los datos). Fuente: Elaboración Propia.}
+    \caption{Ajuste con PSO a registros del viento en Valparaíso (Con todos los datos).\\ Fuente: Elaboración Propia.}
     \label{fig:subfigures}
 \end{figure}
 
@@ -108,7 +108,7 @@ que se demuestra que es posible definir cualquier intervalo (manteniendo como un
         \label{fig:pso_valpo_15_oct_dic}
         \includegraphics[width=0.4\textwidth]{figures/result_2015_Oct-Dic.png}
     }%  
-    \caption{Ajuste con PSO a datos Valparaíso 2015, por rango de meses. Fuente: Elaboración Propia.}
+    \caption{Ajuste con PSO a datos Valparaíso 2015, por rango de meses.\\ Fuente: Elaboración Propia.}
     \label{fig:subfigures}
 \end{figure}
 
@@ -157,31 +157,51 @@ La razón de por qué se utiliza el promedio diario de los datos del viento para
 \end{table}
 \pagebreak
 \subsection{Análisis de los resultados - dirección del viento}
+\subsubsection{Experimento 1, pruebas iniciales}
+
+En la figura \ref{fig:BAD_ADJUST} se puede observar un ajuste bastante distorsionado respecto al histograma de datos. Esto se debe a que la función objetivo del PSO evalúa la diferencia entre las frecuencias experimentales y las obtenidas teóricamente, por lo tanto, diferentes curvas pueden tener igual magnitud del área bajo la curva y por ende, la misma probabilidad con la que se obtiene la frecuencia teórica.\\
+Por esto, es importante que el PSO busque mejorar la solución inicial en una vecindad cercana a esta, de manera de obtener una evolución como la que se aprecia en la figura \ref{fig:EV_SO}. Por ello, el algoritmo inicializa las partículas en la posición de la solución inicial encontrada más o menos una pequeña perturbación.   
 \begin{figure}[ht!]
      \centering
-        \subfigure[Evolucion de la solucion.]{
-            \label{fig:EV_SOL}
-            \includegraphics[width=0.4\textwidth]{figures/ev_solution.png}
-        }%
-        \subfigure[Comparacion solución inicial y final, 2015.]{
-           \label{fig:COMP_INI_END}
-           \includegraphics[width=0.4\textwidth]{figures/sol_ini_sol_fin.png}
-        }\\ %  ------- End of the first row ----------------------%
         \subfigure[Ejemplo de mal ajuste, 2015.]{
             \label{fig:BAD_ADJUST}
             \includegraphics[width=0.4\textwidth]{figures/bad_adjust.png}
         }
-        \subfigure[Solucion inicial y final, 2014.]{
+        \subfigure[Evolucion de la solucion.]{
+            \label{fig:EV_SOL}
+            \includegraphics[width=0.4\textwidth]{figures/ev_solution.png}
+        }%
+    \caption{Pruebas iniciales.\\ Fuente: Elaboración propia.}
+    \label{fig:subfigures}
+\end{figure}
+
+\subsubsection{Experimento 2, Ajustes anuales}
+En este experimento se ajustan los vientos anualmente, en los años de los cuales se obtuvieron datos para este estudio, resultado la figura \ref{fig:SOL_13} para el 2013, la figura \ref{fig:SOL_14} para el 2014 y la figura \ref{fig:SOL_15} para el 2015.
+Tal como se realiza en otros estudios \cite{Heckenbergerova15} \cite{Winddirelse15}, el ajuste de los datos de dirección del viento en un formato
+de largo plazo, permite observar el comportamiento global de los vientos pudiendo evaluar la norma o generalidad en los datos registrados.
+En las figuras referenciadas previamente se observa la evolución de la solución desde la aproximación inicial hasta la mejorada por el PSO.
+
+\begin{figure}[ht!]
+     \centering
+        \subfigure[Solución inicial y final, 2015.]{
+           \label{fig:SOL_15}
+           \includegraphics[width=0.4\textwidth]{figures/sol_ini_sol_fin.png}
+        }
+        \subfigure[Solución inicial y final, 2014.]{
             \label{fig:SOL_14}
             \includegraphics[width=0.4\textwidth]{figures/sol_ini_sol_fin_2014.png}
         }\\
-         \subfigure[Solucion inicial y final, 2013.]{
+         \subfigure[Solución inicial y final, 2013.]{
             \label{fig:SOL_13}
             \includegraphics[width=0.4\textwidth]{figures/sol_ini_sol_fin_2013.png}
         }
-    \caption{Graficos de ajustes anuales}
+    \caption{Graficos de ajustes anuales.\\ Fuente: Elaboración propia.}
     \label{fig:subfigures}
 \end{figure}
+
+\subsubsection{Experimento 3, Ajustes de meses acumulados}
+Similar al ejercicio anterior, los gráficos agrupados en \ref{fig:PLOT_MONTHS_ALL_1} y \ref{fig:PLOT_MONTHS_ALL_2}, permiten visualizar el ajuste de los datos del viento por meses. En este caso se agruparon los datos de los tres años escogidos por cada mes, es decir, la figura \ref{fig:PLOT_SOL_ENERO}, por ejemplo, contiene los datos del mes de enero de los años 2013, 2014 y 2015.\\
+Se puede observar que algunos gráficos muestran un mejor ajuste que otros, a pesar del correcto valor obtenido en la función objetivo como se expresa posteriormente en la tabla \ref{super_tabla}. Esto se debe a que probablemente la solución se escapa más de los deseado de la solución inicial, asunto que será retomado más adelante. 
 \begin{figure}[ht!]
     \begin{center}
          %%MONTHS  
@@ -210,8 +230,8 @@ La razón de por qué se utiliza el promedio diario de los datos del viento para
             \includegraphics[width=0.4\textwidth]{figures/sol_ini_sol_fin_JUNIO.png}
         }
 \end{center}
-    \caption{Gráficos de ajuste de MVM por meses. Fuente: Elaboración propia.}
-    \label{fig:PLOT_MONTHS}
+    \caption{Gráficos de ajuste de MVM por meses.\\ Fuente: Elaboración propia.}
+    \label{fig:PLOT_MONTHS_ALL_1}
 \end{figure}
 
 \begin{figure}[ht!]
@@ -242,9 +262,136 @@ La razón de por qué se utiliza el promedio diario de los datos del viento para
         }
 
     \end{center}
-    \caption{Gráficos de ajuste de MVM por meses. Fuente: Elaboración propia.}
-    \label{fig:PLOT_MONTHS}
+    \caption{Gráficos de ajuste de MVM por meses.\\ Fuente: Elaboración propia.}
+    \label{fig:PLOT_MONTHS_ALL_2}
 \end{figure}
+
+\subsubsection{Experimento 4, Ajuste por meses, visualización en coordenadas polares}
+En las figuras agrupadas \ref{fig:PLOT_MONTHS_1} y \ref{fig:PLOT_MONTHS_2} se aprecia una visualización más interesante. Allí se puede ver de forma más intuitiva las direcciones dominantes del viento, relativas al sistema de referencia utilizado en meteorología conocido comúnmente como la rosa de los vientos \cite{RosaViento}.
+\begin{figure}[ht!]
+    \begin{center}
+        \subfigure[Dirección enero 2015.]{
+            \label{fig:polar_ene_2015}
+            \includegraphics[width=0.4\textwidth]{figures/direction_enero_2015.png}
+        }
+         \subfigure[Dirección enero 2014.]{
+            \label{fig:polar_ene_2014}
+            \includegraphics[width=0.4\textwidth]{figures/direction_enero_2014.png}
+        }\\
+         \subfigure[Dirección enero 2013.]{
+            \label{fig:polar_ene_2013}
+            \includegraphics[width=0.4\textwidth]{figures/direction_enero_2013.png}
+        }
+         \subfigure[Dirección mayo 2015.]{
+            \label{fig:polar_may_2015}
+            \includegraphics[width=0.4\textwidth]{figures/direction_mayo_2015.png}
+        }\\
+         \subfigure[Dirección mayo 2014.]{
+            \label{fig:polar_may_2014}
+            \includegraphics[width=0.4\textwidth]{figures/direction_mayo_2014.png}
+        }
+         \subfigure[Dirección mayo 2013.]{
+            \label{fig:polar_may_2013}
+            \includegraphics[width=0.4\textwidth]{figures/direction_mayo_2013.png}
+        }
+    \end{center}
+    \caption{Gráficos de ajuste por meses en coordenadas polares.\\ Fuente: Elaboración propia.}
+    \label{fig:PLOT_MONTHS_1}
+\end{figure}
+
+\begin{figure}[ht!]
+    \begin{center}
+        \subfigure[Dirección septiembre 2015.]{
+            \label{fig:polar_sep_2015}
+            \includegraphics[width=0.4\textwidth]{figures/direction_septiembre_2015.png}
+        }
+         \subfigure[Dirección septiembre 2014.]{
+            \label{fig:polar_sep_2014}
+            \includegraphics[width=0.4\textwidth]{figures/direction_septiembre_2014.png}
+        }\\
+         \subfigure[Dirección septiembre 2013.]{
+            \label{fig:polar_sep_2013}
+            \includegraphics[width=0.4\textwidth]{figures/direction_septiembre_2013.png}
+        }
+    \end{center}    
+    \caption{Gráficos de ajuste por meses en coordenadas polares.\\ Fuente: Elaboración propia.}
+    \label{fig:PLOT_MONTHS_1}
+\end{figure}
+
+\subsubsection{Resumen de los experimentos}
+\begin{table}[ht!]
+    %\centering
+    \caption{Tabla de tests estadísticos}
+    \label{table:stadistical_tests_direction}
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+        \hline
+        \textbf{Periodo de tiempo} & \textbf{PSI} & \textbf{PSF1} & \textbf{PSF2} & \textbf{Tiempo 1} & \textbf{Tiempo 2} & \textbf{Iteraciones 1} & \textbf{Iteraciones 2} & \textbf{Cantidad datos}\\
+        \hline
+        2015            & 461.834005    & -             & 251.376863    & -             & 38m46.168s    & -     & 50500 & 2076 \\
+        2015            & 461.834005    & 21.580166     & 234,977200    & 8m5.748s      & 47m47.136s    & 9005  & 50500 & 2076 \\
+        2014            & 301.12834005  & 19.869808     & 56,579260     & 20m37.844s    & 46m23.256s    & 29494 & 50500 & 2499 \\ 
+        2013            & 424.247097    & 20.76838      & 69,531194     & 11m41.128s    & 48m23.724s    & 16778 & 50500 & 2346 \\
+        \hline
+        Enero           & 144.420285    & 20.890711     & 22,180797     & 0m3.332s      & 25m37.239s    & 86    & 27276 & 633 \\
+        Febrero         & 130.397909    & 19.450824     & 22,271337     & 0m12.260s     & 0m07.152s     & 288   & 134   & 567\\
+        Marzo           & 104.544257    & 18.610565     & 22,310005     & 0m3.124s      & 0m13.384s     & 49    & 228   & 564 \\
+        Abril           & 74.974500     & 21.135048     & 22,256276     & 0m12.564s     & 17m58.456s    & 192   & 18544 & 559 \\
+        Mayo            & 243.656241    & 21.650182     & 81,752196     & 1m6.924s      & 42m59.612s    & 1237  & 50000 & 589 \\
+        Junio           & 286.308891    & 21.018451     & 188,91869     & 1m42.996s     & 40m52.584s    & 1989  & 50000 & 554 \\
+        Julio           & 177.338315    & 22.064056     & 31,393105     & 0m17.888s     & 45m48.368s    & 315   & 50000 & 604 \\
+        Agosto          & 79.579614     & 21.940013     & 22,170518     & 0m12.940s     & 40m26.344s    & 202   & 41204 & 578 \\
+        Septiembre      & 92.775196     & 21.313293     & 22,319598     & 0m1.776s      & 0m1.732s      & 27    & 166   & 541 \\
+        Octubre         & 188.149963    & 21.810323     & 37,502260     & 0m45.356s     & 42m56.496s    & 825   & 50000 & 564 \\
+        Noviembre       & 363.902142    & 26.25178      & 88,168226     & 42m21.400s    & 42m53.668s    & 50500 & 50000 & 582 \\
+        Diciembre       & 335.286306    & 22.300924     & 37,814759     & 9m56.148s     & 43m52.916s    & 11640 & 50000 & 586 \\
+        \hline 
+        Enero 2015      & 42.941029     & 16.340722     & 18,773471     & 0m4.108s      & 0m0.196s      & 61    & 10    & 220 \\
+        Enero 2014      & 68.102447     & 20.683871     & 21,604465     & 0m1.872s      & 0m0.728s      & 29    & 126   & 206 \\
+        Enero 2013      & 194.988635    & 19.319721     & 24,860318     & 0m0.448s      & 46m29.220s    & 6     & 50000 & 207 \\
+        Mayo 2015       & 60.843802     & 17.998473     & 26,693766     & 0m2.300s      & 41m53.804s    & 39    & 50000 & 173 \\
+        Mayo 2014       & 142.856664    & 20.943375     & 20,483982     & 0m4.832s      & 0m0.3576s     & 82    & 50    & 213 \\
+        Mayo 2013       & 135.687704    & 20.8897       & 22,346281     & 0m5.312s      & 0m1.044s      & 97    & 2089  & 203 \\
+        Septiembre 2015 & 77.411834     & 21.293589     & 25,541457     & 0m8.420s      & 41m48.732s    & 137   & 50000 & 140 \\
+        Septiembre 2014 & 19.563136     & 18.247167     & 15,869938     & 0m0.084s      & 0m0.036s      & 1     & 1     & 200 \\
+        Septiembre 2013 & 68.904049     & 16.617326     & 21,890982     & 0m0.388s      & 0m0.980s      & 5     & 150   & 201 \\
+        \hline  
+    \end{tabular}
+    }   
+\end{table}
+La tabla \ref{table:stadistical_tests_direction} muestra un resumen de los resultados obtenidos al ajustar la distribución de probabilidad \emph{von Mises distribution} en diferentes subconjuntos de tiempo de los datos colectados en los años 2013, 2014 y 2015. La tabla está organizada como sigue a continuación.
+\begin{enumerate}
+    \item \emph{Periodo de tiempo}: Rango de tiempo donde se consideraron los datos para el ajuste.
+    \item \emph{PSI}: Puntaje solución inicial, es decir, el valor obtenido al evaluar la solución inicial en la función objetivo.
+    \item \emph{PSF1}: Puntaje solución final 1, se refiere a la solución obtenida por el PSO al utilizar la estrategia explicada en \ref{sdsadasd Metodo 1}.
+    \item \emph{PSF2}:  Puntaje solución final 2, se refiere a la solución obtenida por el PSO al utilizar la estrategia explicada en \ref{sdsadasd Metodo 2}.
+    \item \emph{Tiempo 1}: Tiempo empleado por el PSO con la estrategia 1 \ref{sdsadasd Metodo 1}. 
+    \item \emph{Tiempo 2}: Tiempo empleado por el PSO con la estrategia 2 \ref{sdsadasd Metodo 2}. 
+    \item \emph{Iteraciones 1}: Iteraciones empleadas por el PSO con la estrategia 1 \ref{sdsadasd Metodo 1}. 
+    \item \emph{Iteraciones 2}: Iteraciones empleadas por el PSO con la estrategia 2 \ref{sdsadasd Metodo 2}. 
+    \item \emph{Cantidad datos}: Cantidad de datos utilizados en el ajuste.
+\end{enumerate}
+
+\begin{figure}[ht!]
+    \begin{center}
+        \includegraphics[width=\textwidth]{figures/comp_v1_v2_iteraciones.png}
+       
+        \includegraphics[width=\textwidth]{figures/comp_v1_v2_puntaje.png}
+    \end{center}    
+    \caption{Comparación de variaciones en el PSO.\\ Fuente: Elaboración propia.}
+    \label{fig:comparison_pso_1}
+\end{figure}
+
+\begin{figure}[ht!]
+    \begin{center}
+        \includegraphics[width=\textwidth]{figures/comp_v1_v2_tiempo.png}
+    \end{center}    
+    \caption{Comparación de variaciones en el PSO.\\ Fuente: Elaboración propia.}
+    \label{fig:comparison_pso_2}
+\end{figure}
+
+\pagebreak
+\subsection{Aplicaciones}
 
 \pagebreak
 \subsection{Conclusiones}
