Correción de informe, redacción

--- a/doc/0_Portada.tex
+++ b/doc/0_Portada.tex
@@ -32,7 +32,7 @@
     \begin{center}
       \begin{tabular}{ l c l }
         PROFESOR GUÍA & : & MARÍA CRISTINA RIFF.\\
-        PROFESOR CORREFERENTE & : & X. X.\\
+        PROFESOR CORREFERENTE & : & ELIZABETH MONTERO URETA\\
       \end{tabular}
     \end{center}
   \end{table}
