--- a/doc/2_Preeliminares.tex
+++ b/doc/2_Preeliminares.tex
@@ -167,3 +167,5 @@ Los resultados obtenidos para los datos recolectados en el aeropuerto de St John
 \end{figure}
 
 %%TODO explicar trabajo de los españoles...
+Otro trabajo interesante de revisar es el caso de estudio realizado por Carta et al. \cite{Carta07}, en donde se utiliza la \emph{finite mixture of von Mises distribution} para representar la velocidad direccional de viento. El ajuste es realizado mediante el método de mínimos cuadrados, y resuelto con el algoritmo Levenberg-Marquardt \cite{Gavin16} el cual requiere de un punto de partida o solución inicial. Para ello, utilizan el mismo método que se propone en el trabajo de \cite{Heckenbergerova13} el cual se utiliza en este trabajo y que es explicado en la siguiente sección \ref{ss:model_math_dir}. La calidad de la solución es medida a través del test $R^2$, y dentro de las conclusiones que se obtienen, es que más de 6 mezclas\emph{mixtures} de von Mises no incrementan considerablemente el valor de $R^2$\\
+El método es aplicado a datos recolectados desde dos estaciones del clima en el archipiélago de las islas Canarias. Una vez más, se confirma que la \emph{finite mixture of von Mises distribution} es aplicable a distintas regiones con una o más direcciones predominantes. 
