--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -106,3 +106,9 @@
     publisher={26th IEEE Canadian Conference Of Electrical And Computer Engineering},
     year={2013}
 }
+@article{Gavin16,
+    author={Gavin, Henri P.},
+    title={The Levenberg-Marquardt method for nonlinear least squares curve-fitting problems},
+    publisher={Department of Civil and Environmental Engineering, Duke University},
+    year={2016}
+}
